2005-12-30  Aaron Bockover  <aaron@aaronbock.net>

	* banshee-sample-plugin: Initial revision of sample plugin project
