@@ -1,3 +1,9 @@
+2006-01-26  Aaron Bockover  <aaron@aaronbock.net>
+
+	* src/SamplePlugin.cs: Updated to reflect changes in plugin API; added
+	a simple example on how to provide custom Sources with a custom view
+	widget
+
 2005-12-30  Aaron Bockover  <aaron@aaronbock.net>
 
 	* banshee-sample-plugin: Initial revision of sample plugin project
